--- a/.vuepress/theme/styles/mobile.styl
+++ b/.vuepress/theme/styles/mobile.styl
@@ -9,7 +9,7 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     width $mobileSidebarWidth
   .page
     padding-left $mobileSidebarWidth
-  .content:not(.custom)
+  .content:not(.custom), .home, .navbar
     padding 2rem
 
 // wide mobile
