--- a/.vuepress/theme/styles/config.styl
+++ b/.vuepress/theme/styles/config.styl
@@ -1,19 +1,12 @@
 // colors
-$accentColor = #3eaf7c
-$textColor = #2c3e50
-$borderColor = #eaecef
-$codeBgColor = #282c34
-$arrowBgColor = #ccc
+$accentColor = #3eaf7c;
+$textColor = #2c3e50;
+$borderColor = #eaecef;
+$darkColor = #212121;
 
-// layout
-$navbarHeight = 3.6rem
-$sidebarWidth = 20rem
-$contentWidth = 740px
+$contentWidth = 740px;
 
 // responsive breakpoints
-$MQNarrow = 959px
-$MQMobile = 719px
-$MQMobileNarrow = 419px
-
-// code
-$lineNumbersWrapperWidth = 3.5rem
+$MQNarrow = 959px;
+$MQMobile = 719px;
+$MQMobileNarrow = 419px;
